# iframe-chart-builder

./: .coveragerc  .env.example  .gitignore  .isort.cfg  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: __init__.py  config.py  constant.py  dash_app.py  data_manager.py  errors.py  main.py  utils.py
app/dependencies/: authorization.py
app/routes/: __init__.py  builder.py  charts_builder.py  listing.py
app/schema/: __init__.py  errors.py  examples.py  params.py  requests.py  response.py
app/services/: chart_factory.py  factory.py  layout.py  table.py  validator.py
app/services/chart_builder/: __init__.py  bar.py  bubble.py  bubble_map.py  choropleth_map.py  line.py  pie.py  radar.py  sunburst.py  windrose.py
app/services/dash_layout/: __init__.py  chart.py  controls.py  table.py
app/tests/: conftest.py
example/: example_bar_long.xlsx  example_bubble_map.xlsx  example_choropleth_map.xlsx  example_pie_chart.xlsx
examples/data/: example_bar_wide.xlsx  example_bubble_chart.xlsx  example_line_chart.xlsx  example_radar_chart.xlsx  example_sunburst_chart.xlsx  example_windrose_chart.xlsx
