[tool.poetry]
name = "chart_builder"
version = "0.1.0"
description = ""
authors = ["Alvin Prayuda <alvinprayuda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
python-dotenv = "^0.19.0"
plotly = "^5.3.1"
pandas = "^1.3.3"
openpyxl = "^3.0.9"
python-multipart = "^0.0.5"
aiofiles = "^0.7.0"
omegaconf = "^2.1.1"
pyarrow = "^5.0.0"
fastparquet = "^0.7.1"
dash = "^2.0.0"
config = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^5.5"
black = "^21.9b0"
taskipy = "^1.8.2"
isort = "^5.9.3"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"

[tool.taskipy.tasks]
app = "uvicorn app.main:app --reload"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
